fix: set default line spacing to one and half
As discussed in PR comment:
https://github.com/vincentdoerig/latex-css/pull/62#issuecomment-1763038024

--- a/style-paged.css
+++ b/style-paged.css
@@ -36,7 +36,7 @@
     /* Default 11pt font-size */
     font-size: 11pt;
     /* One and half line spacing */
-    line-height: 1.3;
+    line-height: 1.5;
     /* Reset LaTeX.css style properties */
     max-width: none;
     min-height: 0px;
